# first-try-physics-engine-development

./: .clang-format  .gitignore  .nvimrc  CMakeLists.txt  README.md  notes.txt
include/: collision.h  defs.h  dynamics.h  polygon_funcs.h  types.h  utils.h  vector_funcs.h
include/data_structures/: linked_list.h
scratch_files/: assert  assert.c
src/: collision.c  dynamics.c  main.c  polygon_funcs.c  utils.c  vector_funcs.c
src/data_structures/: linked_list.c
tests/: Vec2_LL.c  collisions_test.c  demo-sdl.c  dynamics_test.c  loop.c  main.c  polygon_test.c  vectorfuncs_test.c
